# plick

./: .gitignore  Cargo.toml  README.md  \  bol_print  err.txt  final  hello_world.pli  if_false_program  if_program  lol  mytest
src/: ast.rs  cli.rs  codegen.rs  debugger.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  passes.rs  types.rs
src/codegen/: ast_implementations.rs  function_codegen.rs  named_value.rs  named_value_store.rs  prelude.rs  utils.rs
src/codegen/ast_implementations/: assignment.rs  declare.rs  expr.rs  func.rs  get.rs  go.rs  if.rs  put.rs
src/error/: errors.rs
src/types/: character.rs  fixed_decimal.rs  float_decimal.rs  traits.rs
src/types/fixed_decimal/: float_to_fixed.rs
test_pli_files/: bad_assn.pli  float_decimal.pli  forever_loop.pli  get.pli  infinite_float.pli  lolz  mean_calculation.pli  negative_numbers.pli  putting_numbers.pli  subtracting_past_zero.pli  test.pli  test_decimals.pli
tests/: integration_tests.rs
tests/common/: mod.rs
tests/error_tests/: mod.rs
